added change of color input to rounded

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             <div id="colors">
                 <div class="color-selection">
                     <span id="color_front1" class="color-front"></span>
-                    <input type="color" name="color1" value="#00ff00">
+                    <input class="color-input" data-color="0" type="color" name="color1" value="#00ff00">
                     <span class="color-percent"><input type="text" name="color1-percent"><i class="fa-solid fa-percent percentage"></i></span>
                 </div>
                 <div class="color-selection">
                     <span id="color_front2" class="color-front"></span>
-                    <input type="color" name="color2" value="#ff0000">
+                    <input class="color-input" data-color="1" type="color" name="color2" value="#ff0000">
                     <span class="color-percent"><input type="text" name="color2-percent"><i class="fa-solid fa-percent percentage"></i></span>
                 </div>
             </div>
