added change of background with only two colors

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <div class="color-added">
             <div id="colors">
                 <div class="color-selection">
-                    <span id="color_front1" class="color-front"></span>
+                    <span id="color-front1" class="color-front"></span>
                     <input class="color-input" data-color="0" type="color" name="color1" value="#00ff00">
                     <span class="color-percent"><input type="text" name="color1-percent"><i class="fa-solid fa-percent percentage"></i></span>
                 </div>
                 <div class="color-selection">
-                    <span id="color_front2" class="color-front"></span>
+                    <span id="color-front2" class="color-front"></span>
                     <input class="color-input" data-color="1" type="color" name="color2" value="#ff0000">
                     <span class="color-percent"><input type="text" name="color2-percent"><i class="fa-solid fa-percent percentage"></i></span>
                 </div>
@@ -28,7 +28,7 @@
                 <i class="fa-solid fa-plus"></i>
             </div>
         </div>
-        <select name="type-gradient">
+        <select id="type-gradient" name="type-gradient">
             <option value="linear-gradient">linear-gradient</option>
             <option value="radial-gradient">radial-gradient</option>
             <option value="repeat-linear-gradient">repeat-linear-gradient</option>
