added style to percentage

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
                 <div class="color-selection">
                     <span id="color-front1" class="color-front"></span>
                     <input class="color-input" data-color="0" type="color" name="color1" value="#00ff00">
-                    <span class="color-percent"><input type="text" name="color1-percent"><i class="fa-solid fa-percent percentage"></i></span>
+                    <span class="color-percent"><input type="text" value="0" name="color1-percent"><i class="fa-solid fa-percent percentage"></i></span>
                 </div>
                 <div class="color-selection">
                     <span id="color-front2" class="color-front"></span>
                     <input class="color-input" data-color="1" type="color" name="color2" value="#ff0000">
-                    <span class="color-percent"><input type="text" name="color2-percent"><i class="fa-solid fa-percent percentage"></i></span>
+                    <span class="color-percent"><input type="text" value="100" name="color2-percent"><i class="fa-solid fa-percent percentage"></i></span>
                 </div>
             </div>
             <div id="add-color">
@@ -31,7 +31,7 @@
         <select id="type-gradient" name="type-gradient">
             <option value="linear-gradient">linear-gradient</option>
             <option value="radial-gradient">radial-gradient</option>
-            <option value="repeat-linear-gradient">repeat-linear-gradient</option>
+            <option value="repeating-linear-gradient">repeat-linear-gradient</option>
         </select>
     </div>
     <h3 id="css-background"></h3>
