added functionanility of percentage and radial-gradient

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               value="#00ff00"
             />
             <span class="color-percent"
-              ><input type="text" value="0" name="color1-percent" /><i
+              ><input class="color-percent-select" type="text" value="0" name="color1-percent" /><i
                 class="fa-solid fa-percent percentage"
               ></i
             ></span>
@@ -43,7 +43,7 @@
               value="#ff0000"
             />
             <span class="color-percent"
-              ><input type="text" value="100" name="color2-percent" /><i
+              ><input class="color-percent-select" type="text" value="100" name="color2-percent" /><i
                 class="fa-solid fa-percent percentage"
               ></i
             ></span>
