added degree rotation functionality

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               data-color="0"
               type="color"
               name="color1"
-              value="#00ff00"
+              value="#4776E6"
             />
             <span class="color-percent"
               ><input class="color-percent-select" type="text" value="0" name="color1-percent" /><i
@@ -40,10 +40,10 @@
               data-color="1"
               type="color"
               name="color2"
-              value="#ff0000"
+              value="#8E54E9"
             />
             <span class="color-percent"
-              ><input class="color-percent-select" type="text" value="100" name="color2-percent" /><i
+              ><input class="color-percent-select" type="text" value="50" name="color2-percent" /><i
                 class="fa-solid fa-percent percentage"
               ></i
             ></span>
@@ -63,7 +63,7 @@
         </select>
         
         <span class="degrees"
-              ><input type="text" value="0" name="deg" /><span>
+              ><input id="deg" type="text" value="0" name="deg" /><span>
                 deg
               </span>
 
